--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,13 @@ steps:
   inputs:
     runtime: 'core'
 - task: DotNetCoreCLI@2
+  displayName: Build
   inputs:
     command: 'build'
     projects: 'AspNetCoreApi.Boilerplate.sln'
     arguments: '--configuration release'
 - task: BuildQualityChecks@6
+  displayName: 'Build Quality Checks'
   inputs:
     checkWarnings: true
     warningFailOption: 'fixed'
@@ -27,7 +29,7 @@ steps:
   displayName: Pack
   inputs:
     command: pack
-    packagesToPack: AspNetCoreApi.Boilerplate/RequesAspNetCoreApi.BoilerplatetManagement.csproj
+    packagesToPack: AspNetCoreApi.Boilerplate/RequesAspNetCoreApi.Boilerplate.csproj
     configuration: release
     versioningScheme: byBuildNumber
 - task: NuGetCommand@2
