--- a/AspNetCoreApi.Boilerplate/AspNetCoreApi.Boilerplate.csproj
+++ b/AspNetCoreApi.Boilerplate/AspNetCoreApi.Boilerplate.csproj
@@ -27,6 +27,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.1" />
     <PackageReference Include="RequestManagement" Version="3.0.0" />
