fixed cors bug in sample app

--- a/SampleApiWebApp/appsettings.json
+++ b/SampleApiWebApp/appsettings.json
@@ -6,10 +6,10 @@
   },
   "SeqSettings": {
     "Uri": "http://localhost:5341",
-    "Key":  ""
+    "Key": ""
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=RequestManagementSample;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedOrigins": "http://localhost:4200"
 }
